--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body {
 #game {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .gameContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
 }
 .gameContainer h1 {
@@ -25,10 +25,16 @@ body {
   margin-block: 2rem;
 }
 
-.gameContainer_input {
+.gameContainer_Input {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
+}
+
+#result {
+  margin-block: 2rem;
+  text-align: center;
+  color: red;
 }/*# sourceMappingURL=style.css.map */
