--- a/style.scss
+++ b/style.scss
@@ -12,27 +12,33 @@ body{
 #game{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
  
 .gameContainer{
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 
     h1{
         font-size: 2rem;
         margin-block: 2rem;
-        
     }
 
 
 }
     
-    .gameContainer_input{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;        
-        gap: 10px;
-    }
+.gameContainer_Input{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;        
+    gap: 20px;
+}
+
+
+#result {    
+    margin-block: 2rem;
+    text-align: center;
+    color: red;
+}
